--- a/stylesheet.css
+++ b/stylesheet.css
@@ -52,13 +52,14 @@ h4 {
 .right p {
 	margin-left: 5px;
 	margin-right: 5px;
-	margin-top: -10px;
 	font-family: Garamond, serif;
 	color: #000000;
 }
 
 li {
 	list-style-type: square;
+	margin-right: 5px;
+	margin-left: 10px;
 }
 
 a:hover {
