--- a/stylesheet.css
+++ b/stylesheet.css
@@ -110,3 +110,10 @@ a:hover {
 	position: absolute;
 	padding-top: 15px;
 }
+
+#footer.stikybottom {
+    position: fixed;
+    bottom:0;
+    left: 0;
+    right:0;
+}
