--- a/stylesheet.css
+++ b/stylesheet.css
@@ -82,7 +82,7 @@ a:hover {
 	margin-top: 50px;
 	width: 93%;
 	height: 700px;
-	background-color: #4169E1;
+	background-color: #00FFFF;
 	margin-bottom: 10px;
 }
 
